--- a/index.html
+++ b/index.html
@@ -198,46 +198,154 @@
         <div class="container p-5">
           <h2 class="title">Features that blows mind</h2>
           <p class="psapn">
-            We so opinion friends me message as delight. Whole front do of plate<br/>
+            We so opinion friends me message as delight. Whole front do of
+            plate<br />
             heard oh ought. His defective nor convinced residence own.
           </p>
-          <br/>
-          <div class="d-flex justify-content-even ">
+          <br />
+          <div class="d-flex justify-content-even">
             <div class="feature-card d-flex flex-column align-items-left mr-3">
               <img src="Group 307 (1).svg" />
               <br />
 
               <h5 class="topic">Really boy law county she unable her sister</h5>
-              <br/>
+              <br />
               <span class="pspan">
                 Indulgence way everything joy alteration boisterous the
                 attachment. Party we years to order allow asked of.
-            </span>
+              </span>
             </div>
             <div class="feature-card d-flex flex-column align-items-left mr-3">
               <img src="Group 307.svg" />
               <br />
 
               <h5 class="topic">Among sex are leave law built now</h5>
-             <br/>
-                <span class="pspan">
+              <br />
+              <span class="pspan">
                 Indulgence way everything joy alteration boisterous the
                 attachment. Party we years to order allow asked of.
-            </span>
-              
+              </span>
             </div>
             <div class="d-flex flex-column justify-content-between">
-                <div class="text-box "><h5 class="topic">Merits behind on afraid or warmly</h5></div>
-                <div class="text-box "><h5 class="topic">Believing neglected so so allowance existence</h5></div>
+              <div class="text-box">
+                <h5 class="topic">Merits behind on afraid or warmly</h5>
+              </div>
+              <div class="text-box">
+                <h5 class="topic">
+                  Believing neglected so so allowance existence
+                </h5>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="stat container-fluid">
-<img src="Stats.svg"/>
+    <section class="stat container-fluid box">
+      <img src="Stats.svg" />
     </section>
 
+    <section class="recent-blogs container-fluid">
+      <div class="container p-5">
+        <h2 class="title">Recent BLogs</h2>
+        <div class="d-flex justify-content-between blogs my-5">
+          <div>
+            <p class="pspan">BEST PRACTICES</p>
+            <p class="paragraph2">
+              In design active temper be uneasy. Thirty for remove plenty
+              regard.
+            </p>
+            <br />
+            <p class="pspan">Read more</p>
+          </div>
+          <div><img src="Rectangle 155.jpg" /></div>
+        </div>
+        <div class="d-flex blog mt-5 py-5">
+          <div class="d-flex flex-column mr-5">
+            <div>
+              <p class="pspan">BEST PRACTICES</p>
+              <p class="paragraph2">
+                In design active temper be uneasy. Thirty for remove plenty
+                regard.
+              </p>
+            </div>
+            <div>
+              <img src="Rectangle 155 (1).jpg" />
+            </div>
+          </div>
+          <div class="d-flex flex-column mr-5">
+            <div>
+              <p class="pspan">BEST PRACTICES</p>
+              <p class="paragraph2">
+                In design active temper be uneasy. Thirty for remove plenty
+                regard.
+              </p>
+            </div>
+            <div>
+              <img src="Rectangle 155 (1) (1).jpg" />
+            </div>
+          </div>
+          <div class="d-flex flex-column">
+            <div>
+              <p class="pspan">BEST PRACTICES</p>
+              <p class="paragraph2">
+                In design active temper be uneasy. Thirty for remove plenty
+                regard.
+              </p>
+            </div>
+            <div>
+              <img src="Rectangle 155 (2).jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>  
+
+    <section class="container-fluid">
+      <div class="container started p-5">
+        <h2>Discover a better way to manage spendings</h2>
+        <br />
+        <button class="btn btn-orange">Get Started Now</button>
+      </div>
+    </section>
+
+    <section class="footer container-fluid">
+      <div class="container">
+        <div class="row footer-box">
+          <div class="col-sm-3">
+            <ul>
+              <p class="paragraph2">AR Shakir</p>
+              <li>Finance helps companies manage payments easily.</li>
+            </ul>
+          </div>
+          <div class="col-sm-3">
+            <ul>
+              <p class="paragraph2">Company</p>
+              <li>About Us</li>
+              <li>Careers</li>
+              <li>Blog</li>
+              <li>Pricing</li>
+            </ul>
+          </div>
+          <div class="col-sm-3">
+            <ul>
+              <p class="paragraph2">Resources</p>
+              <li>Proposal Template</li>
+              <li>Invoice Template</li>
+              <li>Tuturoial</li>
+              <li>How to write a contract</li>
+            </ul>
+          </div>
+          <div class="col-sm-3">
+            <ul>
+              <p class="paragraph2">Join Our Newsletter</p>
+            </ul>
+            <li></li>
+          </div>
+        </div>
+        <hr />
+        <p class="psapn">Copyright @ AR Shakir 2022. All Rights Reserved.</p>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
