--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -298,7 +300,114 @@
           </div>
         </div>
       </div>
-    </section>  
+    </section>
+
+    <section class="container-fluid faq">
+        <div class="container p-5">
+            <h2 class="title2">
+                Frequently <br/> asked questions
+            </h2>
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading1">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapseOne">
+                                    <p class="sspan">The expense windows adapted sir. Wrong widen drawn.</p>
+                                </button>
+                            </h2>
+                            <div id="collapse1" class="accordion-collapse collapse show " aria-labelledby="headingOne">
+                                <div class="accordion-body">
+                                    <p>Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her.</p>
+                                </div>
+                            </div>
+                        </div>
+    
+                    </div>
+                     <div class="accordion my-4" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading2">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapseOne">
+                                <p class="sspan">Six curiosity day assurance bed necessary?</p>
+                            </button>
+                        </h2>
+                        <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2">
+                            <div class="accordion-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. enim ad minim.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="accordion my-4" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading4">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                                <p class="sspan">Produce say the ten moments parties?</p>
+                            </button>
+                        </h2>
+                        <div id="collapse4" class="accordion-collapse collapse " aria-labelledby="heading4">
+                            <div class="accordion-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. enim ad minim.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="accordion my-4" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading5">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
+                                <p class="sspan">Simple innate summer fat appear basket his desire joy?</p>
+                            </button>
+                        </h2>
+                        <div id="collapse5" class="accordion-collapse collapse " aria-labelledby="heading5">
+                            <div class="accordion-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. enim ad minim.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="accordion my-4" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                                <p class="sspan">Outward clothes promise at gravity do excited?</p>
+                            </button>
+                        </h2>
+                        <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3">
+                            <div class="accordion-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. enim ad minim.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="d-flex flex-column align-items-center shootcard p-5">
+                    <div><img src="Vector 355.svg"></div>
+                    <br/>
+                    <div>
+                        <p class="paragraph2">Do you have more questions?</p>
+                        <p class="pspan">End-to-end payments and financial management in a single solution. Meet the right platform to help realize.</p>
+                    </div>
+                    <br/><br/>
+                  <button class="btn shootbtn "> Shoot a direct mail</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="container-fluid">
       <div class="container started p-5">
@@ -309,12 +418,21 @@
     </section>
 
     <section class="footer container-fluid">
-      <div class="container">
+      <div class="container p-5" >
         <div class="row footer-box">
-          <div class="col-sm-3">
+          <div class="col-sm-3 footer-img">
             <ul>
               <p class="paragraph2">AR Shakir</p>
               <li>Finance helps companies manage payments easily.</li>
+              <br/>
+              <li>
+                <div>
+                    <img src="052-linkedin.svg">
+                    <img src="025-messenger.svg">
+                    <img src="096-twitter.svg">
+                    <img src="097-twoo.svg">
+                </div>
+              </li>
             </ul>
           </div>
           <div class="col-sm-3">
@@ -336,10 +454,14 @@
             </ul>
           </div>
           <div class="col-sm-3">
-            <ul>
-              <p class="paragraph2">Join Our Newsletter</p>
-            </ul>
-            <li></li>
+            <p class="paragraph2">Join Our Newsletter</p>
+
+            <div class="d-flex submitdiv">
+              <div><input placeholder="your email address" /></div>
+              <button class="btn subscribebtn">Subscribe</button>
+            </div>
+            <br/>
+            <span class="spann">* Will send you weekly updates for your better finance management.    </span>
           </div>
         </div>
         <hr />
@@ -363,5 +485,9 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+</body>
   </body>
 </html>
